--- a/.env.example
+++ b/.env.example
@@ -6,7 +6,7 @@
 # 自选股列表（逗号分隔，支持沪深两市代码）
 # 沪市：600xxx, 601xxx, 603xxx
 # 深市：000xxx, 002xxx, 300xxx
-STOCK_LIST=600519,300750,002594
+STOCK_LIST=601127,600686,600900,600519,300750,002594,000002,300042,301236
 
 # 数据源配置
 # Tushare Pro Token（可选，从 https://tushare.pro/weborder/#/login?reg=834638 获取）
@@ -48,14 +48,14 @@ GEMINI_REQUEST_DELAY=30
 # OPENAI_TEMPERATURE=0.7
 #
 # --- DeepSeek（国产，便宜好获取）---
-# OPENAI_API_KEY=sk-xxxxxxxxxxxxxxxx
-# OPENAI_BASE_URL=https://api.deepseek.com/v1
-# OPENAI_MODEL=deepseek-chat
-# OPENAI_TEMPERATURE=0.7
+OPENAI_API_KEY=sk-a8169e1ff4464a2d83458109ab333663
+OPENAI_BASE_URL=https://api.deepseek.com/v1
+OPENAI_MODEL=deepseek-chat
+OPENAI_TEMPERATURE=0.7
 
 # 搜索引擎配置（用于获取股票新闻）
 # Tavily API Keys（支持多个，逗号分隔）
-TAVILY_API_KEYS=your_tavily_key_here
+TAVILY_API_KEYS=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
 # SerpAPI Keys（支持多个，逗号分隔）
 SERPAPI_API_KEYS=your_serpapi_key_here
 # Brave Search API Keys（支持多个，逗号分隔）
@@ -89,9 +89,9 @@ BRAVE_API_KEYS=your_brave_key_here
 # 1. 获取授权码（以QQ邮箱为例）：设置 -> 账户 -> POP3/SMTP服务 -> 开启 -> 获取授权码
 # 2. 填写下面两项即可：
 #
-# EMAIL_SENDER=your_email@qq.com
-# EMAIL_PASSWORD=your_email_auth_code
-# EMAIL_RECEIVERS=receiver@example.com  # 可选，留空则发给自己
+EMAIL_SENDER=2532583188@qq.com
+EMAIL_PASSWORD=vmckrbynjxoiecac
+EMAIL_RECEIVERS=1138519418@qq.com  # 可选，留空则发给自己
 #
 # 【方式五】自定义 Webhook（支持多个，逗号分隔）
 # 适用于：钉钉、Discord、Slack、Bark、自建服务等任意支持 POST JSON 的 Webhook
@@ -125,7 +125,7 @@ BRAVE_API_KEYS=your_brave_key_here
 # 
 # 【方式九】Server酱3 配置（国内推送服务，支持微信推送）
 # 注册Server酱3账号并获取SendKey https://sc3.ft07.com/
-# SERVERCHAN3_SENDKEY=your_serverchan3_sendkey
+SERVERCHAN3_SENDKEY=sctp16089t8phdsd9ybylkuwpnn77ril
 #
 # 【高级配置】消息长度限制（字节）
 # 超过限制会自动分批发送，一般无需修改
