Hide API keys in .env file
Comment out sensitive API keys in the .env file.

--- a/.env
+++ b/.env
@@ -20,7 +20,7 @@ TUSHARE_TOKEN=f1f2f81030c59199b9ca85439825cb41f7d54a211780f8f54cab6a95
 # 从 https://aistudio.google.com/ 获取免费 API Key
 # 留空或删除此行则跳过 Gemini，直接使用方案二
 # 如果是本地运行，直连gemini/openai官网需要特殊网络环境
-GEMINI_API_KEY=
+#GEMINI_API_KEY=
 GEMINI_MODEL=gemini-3-flash-preview
 GEMINI_MODEL_FALLBACK=gemini-2.5-flash
 # 温度参数（0.0-2.0）：控制输出随机性
@@ -57,10 +57,10 @@ OPENAI_TEMPERATURE=0.7
 # Tavily API Keys（支持多个，逗号分隔）
 TAVILY_API_KEYS=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
 # SerpAPI Keys（支持多个，逗号分隔）
-SERPAPI_API_KEYS=your_serpapi_key_here
+#SERPAPI_API_KEYS=your_serpapi_key_here
 # Brave Search API Keys（支持多个，逗号分隔）
 # 获取: https://brave.com/search/api/
-BRAVE_API_KEYS=your_brave_key_here
+#BRAVE_API_KEYS=your_brave_key_here
 
 # ===================================
 # 通知渠道配置（可同时配置多个，全部推送）
